--- a/index.html
+++ b/index.html
@@ -1,114 +1,76 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="Css/style.css">
-    <title>New site</title>
+<html>
+  <head>
+<link rel="stylesheet" href="C:\Users\KDFX Team\Desktop\Project site\style.css">
+<title>Learning</title>
+<style>
+body {
+  font-family: Georgia monospace;
+  background-color: white;
+}
+
+div {
+  align-content: center;
+}
+
+button.More_inf {
+  color: orange;
+  border-color: none;
+  border-style: solid;
+  border-radius: 50%;
+  border-width: thin;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  transition: 550ms;
+  cursor: pointer;
+}
+
+button.More_inf:hover {
+  border-top-right-radius: 1px;
+  border-color: orange;
+  border-width: thin;
+  color: #919191;
+  text-shadow: 1px 1px 10px 2px #FD4466;
+  transition: 300ms 100ms ease-out;
+  outline: none;
+    background-color: #F5F5F5;
+}
+
+button.Less_inf {
+  color: #FF4968;
+  border-color: none;
+  border-style: solid;
+  border-radius: 50%;
+  border-width: thin;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  transition: 550ms;
+  cursor: pointer;
+  text-shadow: 0 0 0 crimson;
+  color: #C41165;
+  background-color: white;
+}
+
+button.Less_inf:hover {
+  border-top-right-radius: 1px;
+  border-color: #C41067;
+  border-width: thin;
+  color: white;
+  transition: 300ms 100ms ease-out;
+  outline: none;
+  text-shadow: 0 0 15px #999;
+  background-color: #9D9E9E;
+}
+</style>
 </head>
 <body>
-    <!-- main container -->
-    <div>
-        <aside>
-            <div>
-                <img src="img/appearance.jpg" alt="appearance">
-            <!-- contacts container -->
-                <h2>Contacts</h2>
-                    <div>
-                        C: <a href="tel:+380951138598">+38 095 113 85 98</a>
-                    </div>
-                    <div>
-                        E: <a href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a>
-                    </div>
-                    <!-- tech skills container -->
-                    <div>
-                        <h2>Tech Skills</h2>
-                        <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>GIT</li>
-                            <li>WebPack</li>
-                            <li>JavaScript</li>
-                            <li>React.js</li>
-                            <li>Node.js</li>
-                        </ul>
-                     </div>
-                      <!-- soft skills container -->
-                     <div>
-                         <h2>Soft Skills</h2>
-                         <ul>
-                             <li>Scrum</li>
-                             <li>Agile</li>
-                             <li>GTD</li>
-                             <li>Teamwork</li>
-                         </ul>
-                     </div>
-            </div>
-        </aside>
-        <div>
-            <div>
-                <h3>Front-End Developer</h3>
-                <h1>Vlad Valuyga</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.Risus commodo viverra maecenas accumsan lacus vel fasilisis</p>
-            </div>
-                <!-- projects container -->
-                <div>
-                    <h2>Projects</h2>
-                    <ol>
-                        <li>
-                            <a href="https://lovecamp.goit.ua/">https://lovecamp.goit.ua/</a>
-                            <span>.............[ HTML5, CSS3 ]</span>
-                        </li>
-                        <li>
-                            <a href="https://cryptohub.goit.ua/">https://cryptohub.goit.ua/</a>
-                            <span>............[ JavaScript ]</span>
-                        </li>
-                        <li>
-                            <a href="https://kidslike.goit.co.ua/">https://kidslike.goit.co.ua/</a>
-                            <span>...........[ React, js, Node.js ]</span>
-                        </li>
-                    </ol>
-                </div>
-                <!-- work experience -->
-                <div>
-                    <h2>Work Experience</h2>
 
-                    <h3>Front-End Developer <span class="orange_text">Freelanse</span></h3>
-                    <p>September 2019 - up to now <span>|</span> Ukraine</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. </li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Manager <span class="orange_text">Roga & Kopyta New</span></h3>
-                    <p>March 2015 - October 2018 <span>|</span> Ukraine</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. </li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Manager <span class="orange_text">Roga & Kopyta LLC</span></h3>
-                    <p>June 2014 - February 2015 <span>|</span> Ukraine</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                    </ul>
-                </div>
-                <!-- education -->
-                <div>
-                    <h2>Education</h2>
-                    
-                    <h3><span class="orange_text">Kharkiv National University of Radioelectronics</span></h3>
-                    <h4>Management</h4>
-                    <p>Septermber 2009 - June 2014 <span>|</span> Ukraine</p>
-                </div>
-        </div>  
-    </div>
+<div>
+  <button class="More_inf">&#5123;</button>
+  <button class="Less_inf">&#5121;</button>
+</div>
 
 </body>
-</html>  
+</html>
